---------------------------------------------------------------------------
Version 1.19.10 (rgerhards), 2007-10-15
- introdcued the new ":modulename:" syntax for calling module actions
  in selector lines; modified ommysql to support it. This is primarily
  an aid for further modules and a prequisite to actually allow third
  party modules to be created.
---------------------------------------------------------------------------
Version 1.19.9 (rgerhards), 2007-10-12
- now packaging system which again contains all components in a single
  tarball
- modularized main() a bit more, resulting in less complex code
- experimentally added an additional thread - will see if that affects
  the segfault bug we experience on some platforms. Note that this change
  is scheduled to be removed again later.
---------------------------------------------------------------------------
Version 1.19.8 (rgerhards), 2007-09-27
- improved repeated message processing
- applied patch provided by varmojfekoj to support building ommysql
  in its own way (now also resides in a plugin subdirectory);
  ommysql is now a separate package
- fixed a bug in cvthname() that lead to message loss if part
  of the source hostname would have been dropped
- created some support for distributing ommysql together with the
  main rsyslog package. I need to re-think it in the future, but
  for the time being the current mode is best. I now simply include
  one additional tarball for ommysql inside the main distribution.
  I look forward to user feedback on how this should be done best. In the
  long term, a separate project should be spawend for ommysql, but I'd
  like to do that only after the plugin interface is fully stable (what
  it is not yet).
---------------------------------------------------------------------------
Version 1.19.7 (rgerhards), 2007-09-25
- added code to handle situations where senders send us messages ending with