@@ -4,6 +4,10 @@ Version 1.19.10 (rgerhards), 2007-10-15
   in selector lines; modified ommysql to support it. This is primarily
   an aid for further modules and a prequisite to actually allow third
   party modules to be created.
+- minor fix in slackware startup script, "-r 0" is now "-r0"
+- updated rsyslogd doc set man page; now in html format
+- undid creation of a separate thread for the main loop -- this did not
+  turn out to be needed or useful, so reduce complexity once again.
 ---------------------------------------------------------------------------
 Version 1.19.9 (rgerhards), 2007-10-12
 - now packaging system which again contains all components in a single
